<resources>
    <string name="app_name">AMS</string>
    <string name="institute_name">AMRITA SCHOOL OF ARTS AND SCIENCES</string>
    <string name="radio_student">STUDENT</string>
    <string name="radio_faculty">FACULTY</string>
    <string name="radio_parent">PARENT</string>
    <string name="button_continue">CONTINUE</string>
    <string name="faculty">Faculty</string>
    <string name="student">Student</string>
    <string name="parent">Parent</string>
    <string name="parent_login">PARENT LOGIN</string>
    <string name="student_login">STUDENT LOGIN</string>
    <string name="faculty_login">FACULTY LOGIN</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="registration_number">Registration Number</string>
    <string name="summary_button">ATTENDANCE SUMMARY</string>
    <string name="coursewise_button">COURSEWISE REPORT</string>
    <string name="request_leave">REQUEST LEAVE</string>
    <string name="status_leave">CHECK STATUS</string>
    <string name="hint_npassword">New Password</string>
    <string name="hint_cpassword">Confirm Password</string>
    <string name="date">MARK DATE</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="remember_me">Remember Me</string>
    <string name="to">TO</string>
    <string name="mark_attendance">MARK ATTENDANCE</string>
    <string name="add_daily_attendance">Add daily attendance of students</string>
    <string name="leave_requests">VIEW LEAVE REQUESTS</string>
    <string name="check_leave_requests_from_students">Check leave requests from students</string>
    <string name="check_attendance_report">Check attendance report of students</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="add_stud_description">Add a new student to the class</string>
    <string name="reg_no">Reg. No :</string>
    <string name="name">Name :</string>
    <string name="contact_no">Contact No :</string>
    <string name="textview">TextView</string>
    <string name="course">Course :</string>
    <string name="add">ADD STUDENT</string>
    <string name="register_no">REGISTER NUMBER.</string>
    <string name="name_hint">STUDENT\'S NAME</string>
    <string name="parent_s">PARENT\'S CONTACT No.</string>
    <string name="attendance_report">ATTENDANCE REPORT</string>
    <string name="check_your_ward_s_attendance_percentage">Check your Ward\'s Attendance percentage</string>
    <string name="int_mca_2015">Int MCA 2015</string>
    <string name="int_mca_2016">Int MCA 2016</string>
    <string name="int_mca_2017">Int MCA 2017</string>
    <string name="int_mca_2018">Int MCA 2018</string>
    <string name="mca_lat_2017">MCA LAT 2017</string>
    <string name="mca_lat_2018">MCA LAT 2018</string>

</resources>
