<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:id="@+id/mark_attendance"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:text="@string/mark_attendance"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="26sp"
            android:background="@drawable/datepicker_bg"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/coursewise_button"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="26sp"
            android:background="@drawable/datepicker_bg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/request_leave"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="26sp"
            android:background="@drawable/datepicker_bg"/>

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/status_leave"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="26sp"
            android:background="@drawable/datepicker_bg"/>
    </LinearLayout>

</LinearLayout>