<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStudent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/reg_no"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/contact_no"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/course"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/course"
        style="@style/spinner_style"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/spinner_bg"
        android:gravity="center"
        android:singleLine="true"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/parent_s"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/regno"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/register_no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course" />
</android.support.constraint.ConstraintLayout>