<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/Date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/datepicker_bg"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/date"
        android:inputType="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/hour2"
        app:layout_constraintStart_toEndOf="@+id/hour1"
        app:layout_constraintTop_toBottomOf="@+id/course" />

    <Spinner
        android:id="@+id/course"
        style="@style/spinner_style"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/spinner_bg"
        android:gravity="center"
        android:singleLine="true"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/Date"
        app:layout_constraintStart_toStartOf="@+id/Date"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/hour1"
        style="@style/spinner_style"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/Date"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:background="@drawable/datepicker_bg"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

    <Spinner
        android:id="@+id/hour2"
        style="@style/spinner_style"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/Date"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_toEndOf="@+id/textView2"
        android:background="@drawable/datepicker_bg"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

    <Button
        android:id="@+id/attendance"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/mark_attendance"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/hour2"
        app:layout_constraintStart_toStartOf="@+id/hour1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Date"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/hour1"
        android:text="@string/to"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

</android.support.constraint.ConstraintLayout>